# envit

./: .gitignore  LICENSE  README.md  pyproject.toml
envit/: cli.py  core.py  encryption.py
tests/: test_config_loading.py  test_encryption.py
